k8s/extract-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extract
  labels:
    app: extract
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extract
  template:
    metadata:
      labels:
        app: extract
    spec:
      containers:
        - name: extract
          image: ghcr.io/cs-muic/scalable-p2-scalable-t3-katukjit-kachakjai/extract-worker:latest
          command: ["rq","worker", "--url" ,"redis://redis:6379"]
          imagePullPolicy: Always
      imagePullSecrets:
        - name: myregistrykey
