k8s/backend-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: p2-backend
spec:
  selector:
    app: p2-backend
  type:  ClusterIP
  ports:
    - name:  http
      port:  80
      targetPort:  5000
